impl db_write
